force-app/main/default/objects/Visualforce_PDF__c/Visualforce_PDF__c.object-meta.xml
<CustomObject>
    <label>Visualforce PDF</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visualforce PDFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>