force-app/main/default/objects/Visualforce_PDF__c/fields/Display_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Sort_Order__c</fullName>
    <label>Display Sort Order</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>