force-app/main/default/objects/Visualforce_PDF__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>