force-app/main/default/objects/Visualforce_PDF__c/fields/Fields_to_Update_For_Print__c.field-meta.xml
<CustomField>
    <fullName>Fields_to_Update_For_Print__c</fullName>
    <label>Fields to Update For Print</label>
    <length>255</length>
    <type>Text</type>
</CustomField>