force-app/main/default/objects/Visualforce_PDF__c/fields/Fields_Values_to_Update_For_Print__c.field-meta.xml
<CustomField>
    <fullName>Fields_Values_to_Update_For_Print__c</fullName>
    <label>Fields Values to Update For Print</label>
    <length>255</length>
    <type>Text</type>
</CustomField>