force-app/main/default/objects/Visualforce_PDF__c/fields/Organization_WIde_Email__c.field-meta.xml
<CustomField>
    <fullName>Organization_WIde_Email__c</fullName>
    <inlineHelpText>Enter Email Address configured in Organization Wide Email</inlineHelpText>
    <label>Organization WIde Email</label>
    <type>Email</type>
</CustomField>