force-app/main/default/objects/Visualforce_PDF__c/fields/Preview_Parameters_To_Send__c.field-meta.xml
<CustomField>
    <fullName>Preview_Parameters_To_Send__c</fullName>
    <label>Preview Parameters To Send</label>
    <type>TextArea</type>
</CustomField>