force-app/main/default/objects/Visualforce_PDF__c/fields/Print_and_Save_Parameters_To_Send__c.field-meta.xml
<CustomField>
    <fullName>Print_and_Save_Parameters_To_Send__c</fullName>
    <label>Print and Save Parameters To Send</label>
    <type>TextArea</type>
</CustomField>