force-app/main/default/objects/Visualforce_PDF__c/fields/Print_Type__c.field-meta.xml
<CustomField>
    <fullName>Print_Type__c</fullName>
    <label>Print Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Individual Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>