force-app/main/default/objects/Visualforce_PDF__c/fields/Recipient_Address_Field__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address_Field__c</fullName>
    <label>Recipient Address Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>