force-app/main/default/objects/Visualforce_PDF__c/fields/Service_Enrollment_Master_Field__c.field-meta.xml
<CustomField>
    <fullName>Service_Enrollment_Master_Field__c</fullName>
    <label>Service Enrollment Master Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>