force-app/main/default/objects/Visualforce_PDF__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <inlineHelpText>This field can be use to filter a document type to something specific to the record. For example Shipping and Receiving use the same object. The Type field can be used to only display shippers or receivers.</inlineHelpText>
    <label>Sub-Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>