force-app/main/default/objects/Visualforce_PDF__c/fields/VF_Pages_for_Zipping__c.field-meta.xml
<CustomField>
    <fullName>VF_Pages_for_Zipping__c</fullName>
    <label>VF Pages for Zipping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>