force-app/main/default/objects/Visualforce_PDF__c/fields/Visual_Force_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Visual_Force_Page_Name__c</fullName>
    <label>Visual Force Page Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>