force-app/main/default/objects/Visualforce_PDF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>File_Name__c</columns>
    <columns>Display_Sort_Order__c</columns>
    <columns>IsActive__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Print_Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Visual_Force_Page_Name__c</columns>
    <columns>Service_Enrollment_Master_Field__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>